Fix firefox wrap and opaque text selection (#474)

--- a/src/components/paint-editor/paint-editor.css
+++ b/src/components/paint-editor/paint-editor.css
@@ -168,13 +168,13 @@ $border-radius: 0.25rem;
     background: transparent;
     border: none;
     display: none;
+    margin: 0px;
+    opacity: .8;
     outline: none;
     overflow: hidden;
     padding: 0px;
     position: absolute;
     resize: none;
-    white-space: nowrap;
-    margin: 0px;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
 }
